Fix page padding for homepage on mobile

--- a/style.css
+++ b/style.css
@@ -468,13 +468,11 @@ div.homepage_faces {
 	display: none;
 }
 
-/*--- Home Page Media Queries ---*/
-@media (max-width: 340px) {
-	body > div.container > main > section:nth-child(7) {
-		margin-bottom: -15px;
-	}
+body > div.container > main > section:nth-child(7) {
+	margin-bottom: -15px;
 }
 
+/*--- Home Page Media Queries ---*/
 @media (min-width: 400px) {
 	.container {
 		width: 100%;
